# This file is part of gfn0.
# SPDX-Identifier: LGPL-3.0-or-later
#
# gfn0 is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# gfn0 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with gfn0.  If not, see <https://www.gnu.org/licenses/>.

option(
  'la_backend',
  type: 'combo',
  value: 'mkl-static',
  yield: true,
  choices: ['mkl', 'mkl-rt', 'mkl-static', 'openblas', 'netlib', 'custom'],
  description: 'Linear algebra backend for program.',
)
option(
  'custom_libraries',
  type: 'array',
  value: [],
  description: 'libraries to load for custom linear algebra backend',
)
option(
  'openmp',
  type: 'boolean',
  value: true,
  yield: true,
  description: 'use OpenMP parallelisation',
)
option(
  'build_exe',
  type: 'boolean',
  value: false,
  description: 'build with a test binary',
)
option(
  'with_gbsa',
  type: 'boolean',
  value: true,
  description: 'build with GBSA/ALPB support',
)

