
if get_option('with_gbsa')
subdir('gbsa')
endif

srcs += files(
   'gfn0_math_wrapper.f90',
   'slater_module.f90',
   'wfn_module.f90',
   'cn_module.f90',
   'eeq_module.F90',
   'dftd4param.f90',
   'overlap_module.f90',
   'gfn0_types.f90',
   'gfn0_dftd4.f90',
   'gfn0_srb.f90',
   'gfn0_param.f90',
   'gfn0_basis.f90',
   'gfn0_qm.f90',
   'gfn0_gbsa.F90',
   'gfn0_prints.f90',
   'gfn0_occ.f90',
   'gfn0_module.f90',
   'gfn0_interface.f90',
)

prog += files(
)
